# MyVulkanDemos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  examplecmake  readme.md
src/: main.cpp
src/base/: CMakeLists.txt  helper.cpp  helper.hpp  test.cpp  test.hpp
src/core/: CMakeLists.txt  bootstrap.cpp  bootstrap.hpp  converter.hpp  helper.cpp  helper.hpp  settings.hpp  shaderobj.cpp  shaderobj.hpp
src/core/old/: helper.hpp
src/old/: shaderobj.cpp  shaderobj.hpp
src/subprojects/: CMakeLists.txt
src/subprojects/basic/: main.cpp
src/subprojects/cam-1/: CMakeLists.txt  device.hpp  features.hpp  init.hpp  main.cpp
src/subprojects/cam-2/: CMakeLists.txt  data.hpp  init.hpp  input.hpp  main.cpp  state.hpp  ui.hpp
src/subprojects/cam-2/pipelines/: basic.hpp  overlay.hpp
src/subprojects/cam-2/shaders/: triangle.vert
src/subprojects/cam-3/: CMakeLists.txt  input.hpp  main.cpp  objects.hpp  setup.cpp  setup.hpp  state.hpp  structs.hpp  todo.md  ui.hpp
src/subprojects/cam-3/core/: material.hpp
src/subprojects/cam-3/pipelines/: basic.hpp  overlay.hpp
src/subprojects/camera-instancing/: CMakeLists.txt  main.cpp
src/subprojects/camera-instancing/shaders/: triangle.vert
src/subprojects/clean-tri/: CMakeLists.txt  main.cpp
src/subprojects/clean-tri-resize/: CMakeLists.txt  main.cpp
src/subprojects/compute-imgui/: CMakeLists.txt
src/subprojects/compute-texture/: CMakeLists.txt  main.cpp
src/subprojects/compute-texture-reflect/: CMakeLists.txt  main.cpp
src/subprojects/compute-texture-reflect/shaders/: triangle.frag
src/subprojects/compute-texture/shaders/: texture_gen.comp  triangle.vert
src/subprojects/engine-1/: CMakeLists.txt  features.hpp  helper.hpp  main.cpp  objects.hpp  setup.cpp  setup.hpp  structs.hpp  todo.md  ui.hpp
src/subprojects/engine-1/core/: allocator.hpp  input.hpp  objects.hpp  state.hpp  structs.hpp  window.hpp
src/subprojects/engine-1/pipelines/: basic.hpp
src/subprojects/imguitest/: CMakeLists.txt  main.cpp
src/subprojects/old/basic/: CMakeLists.txt
src/subprojects/old/compute-imgui/: main.cpp  notes.md
src/subprojects/old/compute-imgui/shaders/: blit_to_swapchain.comp  fullscreen_quad.vert  game_of_life.comp  seed.comp  textured.frag
src/subprojects/old/tri-window/: CMakeLists.txt
src/subprojects/old/tri-window-imgui/: CMakeLists.txt  main.cpp
src/subprojects/old/triangle/: main.cpp
src/subprojects/rttest/: CMakeLists.txt  README.md  main.cpp
src/subprojects/rttest/shaders/: closesthit.rchit  miss.rmiss  raygen.rgen
src/subprojects/shadertoy/: CMakeLists.txt  main.cpp  rendering.cpp  rendering.hpp  swapchain_utils.cpp  swapchain_utils.hpp  ui.cpp  ui.hpp
src/subprojects/synctest/: CMakeLists.txt  main.cpp
src/subprojects/synctest/shaders/: triangle.vert
src/subprojects/testing/: CMakeLists.txt  main2.cpp
src/subprojects/tri-vbuf/: CMakeLists.txt  main.cpp
src/subprojects/tri-vbuf-vma/: CMakeLists.txt  main.cpp
src/subprojects/tri-vbuf-vma-2/: CMakeLists.txt  main.cpp
src/subprojects/tri-vbuf-vma-2/offload/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  rendering.cpp  rendering.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  types.hpp
src/subprojects/tri-window/: main.cpp
src/subprojects/tri-window-imgui/: main.cpp  notes.md
src/subprojects/triangle/: CMakeLists.txt  main.cpp
src/subprojects/window-imgui/: CMakeLists.txt  main.cpp
