# Subprojects root
# add_subdirectory(basic)
add_subdirectory(clean-tri)
add_subdirectory(clean-tri-resize)
# add_subdirectory(testing)
# add_subdirectory(triangle)
# add_subdirectory(tri-window)
# add_subdirectory(tri-window-imgui)
# add_subdirectory(window-imgui)
# add_subdirectory(compute-imgui)
