# Subprojects root
# add_subdirectory(basic)
add_subdirectory(clean-tri)
add_subdirectory(clean-tri-resize)
add_subdirectory(synctest)
# add_subdirectory(rttest)
# add_subdirectory(compute-gol)
add_subdirectory(compute-texture)
add_subdirectory(compute-texture-reflect)
add_subdirectory(imguitest)
add_subdirectory(shadertoy)
# add_subdirectory(camera-instancing)
add_subdirectory(tri-vbuf)
add_subdirectory(tri-vbuf-vma)
add_subdirectory(tri-vbuf-vma-2)
add_subdirectory(cam-1)
# add_subdirectory(testing)
# add_subdirectory(triangle)
# add_subdirectory(tri-window)
# add_subdirectory(tri-window-imgui)
# add_subdirectory(window-imgui)
# add_subdirectory(compute-imgui)
